draft of CentralMessagingSystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(LimitOrderBook main.cpp
         headers/MessagingQueue.h
         headers/Message.h
         src/MessagingQueue.cpp
+        src/CentralMessageSystem.cpp
 )
