--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ add_executable(LimitOrderBook main.cpp
         headers/Message.h
         src/MessagingQueue.cpp
         src/CentralMessageSystem.cpp
+        headers/Execution.h
 )
