database conneciton addded

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,15 @@ project(LimitOrderBook)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# Locate the PostgreSQL library
+find_package(PostgreSQL REQUIRED)
+include_directories(${PostgreSQL_INCLUDE_DIRS})
+
+# Manually set the include and library paths for libpqxx
+include_directories(/opt/homebrew/include) # replace with the actual path
+link_directories(/opt/homebrew/lib)       # replace with the actual path
+
+
 add_executable(LimitOrderBook main.cpp
         headers/Order.h
         headers/Limit.h
@@ -20,4 +29,9 @@ add_executable(LimitOrderBook main.cpp
         src/MessagingQueue.cpp
         src/CentralMessageSystem.cpp
         headers/Execution.h
+        headers/DBConnection.h
+        src/DBConnection.cpp
 )
+
+# Link the PostgreSQL and libpqxx libraries
+target_link_libraries(LimitOrderBook ${PostgreSQL_LIBRARIES} pqxx)
