done but broken

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,25 +2,25 @@ cmake_minimum_required(VERSION 3.26)
 project(LimitOrderBook)
 
 set(CMAKE_CXX_STANDARD 17)
+set(ASIO_INCLUDE_DIR /Users/rezatabrizi/dev/sdk/asio/include)
 
 # Locate the PostgreSQL library
 find_package(PostgreSQL REQUIRED)
-include_directories(${PostgreSQL_INCLUDE_DIRS})
+include_directories(${PostgreSQL_INCLUDE_DIRS} ${ASIO_INCLUDE_DIR})
 
 # Manually set the include and library paths for libpqxx
 include_directories(/opt/homebrew/include) # replace with the actual path
 link_directories(/opt/homebrew/lib)       # replace with the actual path
+include_directories(../Net/include)
+add_compile_definitions(ASIO_STANDALONE)
 
 
-add_executable(LimitOrderBook main.cpp
+add_executable(LimitOrderBook exchange_drive.cpp
         headers/Order.h
         headers/Limit.h
         src/Limit.cpp
         headers/LOB.h
         src/LOB.cpp
-        headers/Exchange.h
-        headers/IObserver.h
-        headers/ISubject.h
         headers/OrderBookManager.h
         src/OrderBookManager.cpp
         headers/CentralMessageSystem.h
@@ -29,13 +29,11 @@ add_executable(LimitOrderBook main.cpp
         src/CentralMessageSystem.cpp
         headers/Execution.h
         headers/DBConnection.h
-        src/DBConnection.cpp
-        headers/Connection.h
         headers/Client.h
-        headers/NetMessage.h
-        headers/NetCommon.h
-        headers/NetConnection.h
+        headers/ExchangeServer.h
 )
+
+add_executable(Client test_client.cpp)
 
 # Link the PostgreSQL and libpqxx libraries
 target_link_libraries(LimitOrderBook ${PostgreSQL_LIBRARIES} pqxx)
